# rating-operator-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  LICENSE.txt  Makefile  README.md  config.sh  run.sh  setup.cfg  setup.py  tests.bats  tox.ini
docker/: Dockerfile  entrypoint.sh  environment.sh
src/rating_operator/: __init__.py
src/rating_operator/api/: __init__.py  app.py  check.py  config.py  db.py  schema.py  secret.py  utils.py  write_frames.py
src/rating_operator/api/endpoints/: auth.py  configs.py  frames.py  grafana.py  instances.py  metrics.py  models.py  namespaces.py  nodes.py  pods.py  prometheus.py  templates.py  tenants.py
src/rating_operator/api/postgres/: engine.py  schema.py
src/rating_operator/api/postgres/scripts/: 0001.sql  0002.sql
src/rating_operator/api/queries/: auth.py  frames.py  metrics.py  namespaces.py  nodes.py  pods.py
src/rating_operator/api/static/css/: defaultStyle.css  styles.css
src/rating_operator/api/static/styles/: styles.css
src/rating_operator/api/templates/: dashboards.html  home.html  login.html  password.html  signup.html
tests/: test_metrics_validation.py  test_rules_validation.py
