# ==================================
# Setuptools and tools configuration
# ==================================
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = rating.operator..api
version = file:VERSION.txt
description = 'rating-operator-api'
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    Monitoring
    Kubernetes
license = Apache-2.0
license_files = LICENSE.txt
platform = any

# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Monitoring
    Development Status :: 2 - Pre-Alpha
    Operating System :: POSIX

author = AlterWay R&D team
author_email = rnd@alterway.fr
url = https://XXX

[options]
python_requires = >=3.7
install_requires =
    Flask
    flask_sqlalchemy
    flask_json
    flask-cors
    jsonschema
    kubernetes
    passlib
    psycopg2
    prometheus_client
    pyhive
    python-keycloak
    pyyaml
    sqlalchemy
    sqlalchemy-postgres-copy
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
tests_require =
    pytest
[options.packages.find]
where = src

[options.data_files]
. = VERSION.txt

[options.extras_require]
# Development / test tools
dev =
    flake8
    flake8-comprehensions
    flake8-docstrings
    flake8-quotes
    flake8-import-order
    pep8-naming
    pytest
doc =
    Sphinx

[options.entry_points]
console_scripts =
sqlalchemy.dialects =

[bdist_wheel]
universal = true

[flake8]
max-complexity = 10
max-line-length = 90
ignore =
        D100
        D101
        D102
        D103
        D104
        D105
        D107
exclude =
        .git
        __pycache__
        .tox
        .eggs
        *.egg
        build
        dist
        venv
