# ==================================
# Setuptools and tools configuration
# ==================================
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = rating.operator.api
version = file:VERSION.txt
description = 'rating-operator-api'
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    Monitoring
    Kubernetes
license = Apache-2.0
license_files = LICENSE.txt
platform = any

# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Monitoring
    Development Status :: 2 - Pre-Alpha
    Operating System :: POSIX

author = AlterWay R&D team
author_email = rnd@alterway.fr
url = https://XXX

[options]
python_requires = >=3.7
install_requires =
    Flask==2.0.2
    flask_sqlalchemy==2.5.1
    flask_json==0.3.4
    flask-cors==3.0.10
    jsonschema==4.3.3
    kubernetes==21.7.0
    passlib==1.7.4
    psycopg2==2.9.3
    prometheus_client==0.12.0
    pyhive==0.6.4
    python-ldap
    pyyaml==6.0.1
    sqlalchemy==1.4.29
    sqlalchemy-postgres-copy==0.5.0
    Werkzeug==2.2.2
    PyJWT==2.3.0
    python-keycloak==4.1.0
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
tests_require =
    pytest
[options.packages.find]
where = src

[options.data_files]
. = VERSION.txt

[options.extras_require]
# Development / test tools
dev =
    flake8
    flake8-comprehensions
    flake8-docstrings
    flake8-quotes
    flake8-import-order
    pep8-naming
    pytest
doc =
    Sphinx

[options.entry_points]
console_scripts =
sqlalchemy.dialects =

[bdist_wheel]
universal = true

[flake8]
max-complexity = 10
max-line-length = 90
ignore =
        D100
        D101
        D102
        D103
        D104
        D105
        D107
exclude =
        .git
        __pycache__
        .tox
        .eggs
        *.egg
        build
        dist
        venv
